feati25: Correct the unit tests based in the new implementation